spacing fixed

--- a/src/components/ProductNavigation/navItems/NavItem.css
+++ b/src/components/ProductNavigation/navItems/NavItem.css
@@ -87,7 +87,7 @@
 @media screen and (min-width: 600px) {
   .Product-Item {
     margin: 0 auto;
-    margin-bottom: 100px;
+    margin-bottom: 60px;
   }
 }
 
