--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -73,6 +73,15 @@
   border-radius: 8px;
 }
 
+@media screen and (min-width: 600px) {
+  .Home-Main-Content {
+    margin-top: 100px;
+  }
+ .Home-Header {
+  margin-bottom: 0px
+}
+}
+
 @media screen and (min-width: 900px) {
   .Home-Main-Content {
     padding: 0 100px;
